Cleaned and Commented the code and changed the audio recording to 30 seconds

--- a/HW1-1.ipynb
+++ b/HW1-1.ipynb
@@ -2,114 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import pyaudio\n",
-    "import wave\n",
-    "import threading\n",
-    "import keyboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a VideoCapture object to access the camera \n",
-    "frame_index = 1\n",
-    "cap = cv2.VideoCapture(0) #0 means webcam \n",
-    "\n",
-    "while True:\n",
-    "    ret, frame = cap.read()\n",
-    "    cv2.imshow(\"This is sepehr webcam\", frame)\n",
-    "\n",
-    "    #Press the \"c\" key to capture a frame\n",
-    "    if cv2.waitKey(1) & 0xFF == ord(\"c\"):  \n",
-    "        cv2.imwrite(f\"captured_frame.jpg\", frame)\n",
-    "        break\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the audio recording parameters\n",
-    "CHUNK = 1024\n",
-    "FORMAT = pyaudio.paInt16\n",
-    "CHANNELS = 1\n",
-    "RATE = 44100\n",
-    "RECORD_SECONDS = 30\n",
-    "class AudioRecorder:\n",
-    "    def __init__(self):\n",
-    "        self.frames = []\n",
-    "        self.recording = False\n",
-    "\n",
-    "    def start_recording(self):\n",
-    "        self.recording = True\n",
-    "        self.frames = []\n",
-    "        threading.Thread(target=self._record_audio).start()\n",
-    "\n",
-    "    def stop_recording(self):\n",
-    "        self.recording = False\n",
-    "\n",
-    "    def _record_audio(self):\n",
-    "        p = pyaudio.PyAudio()\n",
-    "        stream = p.open(format=FORMAT,\n",
-    "                        channels=CHANNELS,\n",
-    "                        rate=RATE,\n",
-    "                        input=True,\n",
-    "                        frames_per_buffer=CHUNK)\n",
-    "        while self.recording:\n",
-    "            data = stream.read(CHUNK)\n",
-    "            self.frames.append(data)\n",
-    "        stream.stop_stream()\n",
-    "        stream.close()\n",
-    "        p.terminate()\n",
-    "\n",
-    "    def save_recording(self, filename):\n",
-    "        p = pyaudio.PyAudio()\n",
-    "        stream = p.open(format=FORMAT,\n",
-    "                        channels=CHANNELS,\n",
-    "                        rate=RATE,\n",
-    "                        output=True)\n",
-    "        wf = wave.open(filename, 'wb')\n",
-    "        wf.setnchannels(CHANNELS)\n",
-    "        wf.setsampwidth(p.get_sample_size(FORMAT))\n",
-    "        wf.setframerate(RATE)\n",
-    "        wf.writeframes(b''.join(self.frames))\n",
-    "        wf.close()\n",
-    "        stream.stop_stream()\n",
-    "        stream.close()\n",
-    "        p.terminate()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of the AudioRecorder class\n",
-    "audio_recorder = AudioRecorder()\n",
-    "keyboard.on_press_key('r', lambda _: audio_recorder.start_recording())\n",
+    "# Importing necessary libraries\n",
+    "import cv2  # OpenCV for image and video processing\n",
+    "import numpy as np  # NumPy for numerical operations\n",
+    "import pyaudio  # PyAudio for audio streaming\n",
+    "import wave  # Wave to read and write WAV files\n",
+    "import threading  # Threading for running tasks concurrently\n",
+    "import keyboard  # Keyboard to listen to and control keyboard events\n",
+    "# if the libraries are not included properly, try installing them by \"pip install <library name>\" command in vscode terminal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frame captured and saved as 'captured_frame.jpg'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a VideoCapture object to access the camera\n",
+    "cap = cv2.VideoCapture(0)  # 0 means webcam\n",
     "\n",
-    "# Stop recording and save the audio file\n",
-    "keyboard.on_press_key('s', lambda _: audio_recorder.stop_recording())\n",
+    "while True:\n",
+    "    # Capture frame-by-frame\n",
+    "    ret, frame = cap.read()\n",
     "\n",
-    "# Wait for the recording to complete\n",
-    "keyboard.wait('esc')\n",
+    "    # If frame is read correctly, ret is True\n",
+    "    if not ret:\n",
+    "        print(\"Can't receive frame (stream end?). Exiting ...\")\n",
+    "        break\n",
     "\n",
-    "# Save the recorded audio as a file\n",
-    "audio_recorder.save_recording(\"recorded_audio.wav\")"
+    "    # Display the resulting frame\n",
+    "    cv2.imshow(\"This is your webcam\", frame)\n",
+    "\n",
+    "    # Press the \"c\" key to capture a frame\n",
+    "    if cv2.waitKey(1) & 0xFF == ord(\"c\"):\n",
+    "        # Save the captured frame to disk\n",
+    "        cv2.imwrite(\"captured_frame.jpg\", frame)\n",
+    "        print(\"Frame captured and saved as 'captured_frame.jpg'\")\n",
+    "        break\n",
+    "\n",
+    "# When everything done, release the capture and destroy all windows\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording...\n",
+      "Recording finished\n",
+      "The recording has been saved as 'output.wav'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configuring parameters\n",
+    "duration = 30  # seconds\n",
+    "chunk = 1024\n",
+    "format = pyaudio.paInt16\n",
+    "channels = 2\n",
+    "sample_rate = 44100\n",
+    "\n",
+    "# Initialize PyAudio\n",
+    "p = pyaudio.PyAudio()\n",
+    "\n",
+    "# Open stream\n",
+    "stream = p.open(format=format,\n",
+    "                channels=channels,\n",
+    "                rate=sample_rate,\n",
+    "                input=True,\n",
+    "                frames_per_buffer=chunk)\n",
+    "\n",
+    "frames = []\n",
+    "\n",
+    "print(\"Recording...\")\n",
+    "\n",
+    "for i in range(0, int(sample_rate / chunk * duration)):\n",
+    "    data = stream.read(chunk)\n",
+    "    frames.append(data)\n",
+    "\n",
+    "print(\"Recording finished\")\n",
+    "\n",
+    "# Stop and close the stream\n",
+    "stream.stop_stream()\n",
+    "stream.close()\n",
+    "p.terminate()\n",
+    "\n",
+    "# Save the recording\n",
+    "wf = wave.open('output.wav', 'wb')\n",
+    "wf.setnchannels(channels)\n",
+    "wf.setsampwidth(p.get_sample_size(format))\n",
+    "wf.setframerate(sample_rate)\n",
+    "wf.writeframes(b''.join(frames))\n",
+    "wf.close()\n",
+    "\n",
+    "print(\"The recording has been saved as 'output.wav'\")"
    ]
   }
  ],
