Humanization + changed the channel number
Changed the audio channel numbers from 2 to 1 due to the weird bug i had

--- a/HW1-1.ipynb
+++ b/HW1-1.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
-    "import cv2  # OpenCV for image and video processing\n",
-    "import numpy as np  # NumPy for numerical operations\n",
-    "import pyaudio  # PyAudio for audio streaming\n",
-    "import wave  # Wave to read and write WAV files\n",
-    "import threading  # Threading for running tasks concurrently\n",
-    "import keyboard  # Keyboard to listen to and control keyboard events\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pyaudio \n",
+    "import wave \n",
+    "import threading \n",
+    "import keyboard \n",
     "# if the libraries are not included properly, try installing them by \"pip install <library name>\" command in vscode terminal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,6 @@
     "    # Capture frame-by-frame\n",
     "    ret, frame = cap.read()\n",
     "\n",
-    "    # If frame is read correctly, ret is True\n",
-    "    if not ret:\n",
-    "        print(\"Can't receive frame (stream end?). Exiting ...\")\n",
-    "        break\n",
-    "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow(\"This is your webcam\", frame)\n",
     "\n",
@@ -59,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +72,7 @@
     "duration = 30  # seconds\n",
     "chunk = 1024\n",
     "format = pyaudio.paInt16\n",
-    "channels = 2\n",
+    "channels = 1\n",
     "sample_rate = 44100\n",
     "\n",
     "# Initialize PyAudio\n",
