changed to press r to start recording

--- a/HW1-1.ipynb
+++ b/HW1-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frame captured and saved as 'captured_frame.jpg'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a VideoCapture object to access the camera\n",
     "cap = cv2.VideoCapture(0)  # 0 means webcam\n",
@@ -54,19 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording...\n",
-      "Recording finished\n",
-      "The recording has been saved as 'output.wav'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configuring parameters\n",
     "duration = 30  # seconds\n",
@@ -78,37 +60,41 @@
     "# Initialize PyAudio\n",
     "p = pyaudio.PyAudio()\n",
     "\n",
-    "# Open stream\n",
-    "stream = p.open(format=format,\n",
-    "                channels=channels,\n",
-    "                rate=sample_rate,\n",
-    "                input=True,\n",
-    "                frames_per_buffer=chunk)\n",
+    "print(\"press 'r' to start recording\")\n",
+    "while True:\n",
+    "    if keyboard.is_pressed('r'):\n",
+    "        # Open stream\n",
+    "        stream = p.open(format=format,\n",
+    "                        channels=channels,\n",
+    "                        rate=sample_rate,\n",
+    "                        input=True,\n",
+    "                        frames_per_buffer=chunk)\n",
     "\n",
-    "frames = []\n",
+    "        frames = []\n",
     "\n",
-    "print(\"Recording...\")\n",
+    "        print(\"Recording...\")\n",
     "\n",
-    "for i in range(0, int(sample_rate / chunk * duration)):\n",
-    "    data = stream.read(chunk)\n",
-    "    frames.append(data)\n",
+    "        for i in range(0, int(sample_rate / chunk * duration)):\n",
+    "            data = stream.read(chunk)\n",
+    "            frames.append(data)\n",
     "\n",
-    "print(\"Recording finished\")\n",
+    "        print(\"Recording finished\")\n",
     "\n",
-    "# Stop and close the stream\n",
-    "stream.stop_stream()\n",
-    "stream.close()\n",
-    "p.terminate()\n",
+    "        # Stop and close the stream\n",
+    "        stream.stop_stream()\n",
+    "        stream.close()\n",
+    "        p.terminate()\n",
     "\n",
-    "# Save the recording\n",
-    "wf = wave.open('output.wav', 'wb')\n",
-    "wf.setnchannels(channels)\n",
-    "wf.setsampwidth(p.get_sample_size(format))\n",
-    "wf.setframerate(sample_rate)\n",
-    "wf.writeframes(b''.join(frames))\n",
-    "wf.close()\n",
+    "        # Save the recording\n",
+    "        wf = wave.open('output.wav', 'wb')\n",
+    "        wf.setnchannels(channels)\n",
+    "        wf.setsampwidth(p.get_sample_size(format))\n",
+    "        wf.setframerate(sample_rate)\n",
+    "        wf.writeframes(b''.join(frames))\n",
+    "        wf.close()\n",
     "\n",
-    "print(\"The recording has been saved as 'output.wav'\")"
+    "        print(\"The recording has been saved as 'output.wav'\")\n",
+    "        break"
    ]
   }
  ],
