Added TCP/IP connection to send and receive the image and the audio

--- a/1/HW1-1.1.ipynb
+++ b/1/HW1-1.1.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
+    "import sys\n",
     "import cv2\n",
-    "import numpy as np\n",
     "import pyaudio \n",
     "import wave \n",
-    "import threading \n",
     "import keyboard \n",
     "# if the libraries are not included properly, try installing them by \"pip install <library name>\" command in vscode terminal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frame captured and saved as 'captured_frame.jpg'\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a VideoCapture object to access the camera\n",
     "cap = cv2.VideoCapture(0)  # 0 means webcam\n",
@@ -46,9 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "press 'r' to start recording\n",
+      "Recording...\n",
+      "Recording finished\n",
+      "The recording has been saved as 'output.wav'\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuring parameters\n",
     "duration = 30  # seconds\n",
