UI added for frame capture and audio record , UI is still ugly , audio-icon added!

--- a/HW1-1.ipynb
+++ b/HW1-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,25 @@
     "import numpy as np\n",
     "import pyaudio \n",
     "import wave \n",
-    "import threading \n",
-    "import keyboard \n",
-    "# if the libraries are not included properly, try installing them by \"pip install <library name>\" command in vscode terminal"
+    "import keyboard "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frame captured and saved as 'captured_frame.jpg'\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a VideoCapture object to access the camera\n",
     "cap = cv2.VideoCapture(0)  # 0 means webcam\n",
-    "\n",
     "while True:\n",
     "    # Capture frame-by-frame\n",
     "    ret, frame = cap.read()\n",
@@ -46,9 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "press 'r' to start recording\n",
+      "Recording...\n",
+      "Recording finished\n",
+      "The recording has been saved as 'output.wav'\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuring parameters\n",
     "duration = 30  # seconds\n",
@@ -96,6 +112,129 @@
     "        print(\"The recording has been saved as 'output.wav'\")\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pyaudio\n",
+    "import wave\n",
+    "from PyQt5.QtWidgets import QApplication, QMainWindow, QPushButton, QLabel\n",
+    "from PyQt5.QtGui import QImage, QPixmap, QIcon\n",
+    "from PyQt5.QtCore import QTimer, Qt\n",
+    "\n",
+    "\n",
+    "class MainWindow(QMainWindow):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.setWindowTitle(\"Webcam and Voice Recorder\")\n",
+    "        self.setGeometry(100, 100, 800, 600)\n",
+    "\n",
+    "        self.video_label = QLabel(self)\n",
+    "        self.video_label.setGeometry(50, 50, 640, 480)\n",
+    "\n",
+    "        self.capture_button = QPushButton(\"Capture Frame\", self)\n",
+    "        self.capture_button.setGeometry(50, 550, 150, 30)\n",
+    "        self.capture_button.clicked.connect(self.capture_frame)\n",
+    "\n",
+    "        self.goto_audio_button = QPushButton(\"Go to Audio\", self)\n",
+    "        self.goto_audio_button.setGeometry(250, 550, 150, 30)\n",
+    "        self.goto_audio_button.clicked.connect(self.switch_to_audio_page)\n",
+    "        self.goto_audio_button.hide()\n",
+    "\n",
+    "        self.record_button = QPushButton(self)\n",
+    "        self.record_button.setGeometry(250, 550, 150, 150)\n",
+    "        self.record_button.setIcon(QIcon('record_icon.png')) \n",
+    "        self.record_button.setIconSize(self.record_button.size())\n",
+    "        self.record_button.clicked.connect(self.record_voice)\n",
+    "        self.record_button.hide()\n",
+    "\n",
+    "        self.capture = cv2.VideoCapture(0)\n",
+    "        self.timer = QTimer(self)\n",
+    "        self.timer.timeout.connect(self.update_frame)\n",
+    "        self.timer.start(10)\n",
+    "\n",
+    "        self.audio_format = pyaudio.paInt16\n",
+    "        self.audio_channels = 1\n",
+    "        self.audio_sample_rate = 44100\n",
+    "        self.audio_chunk_size = 1024\n",
+    "        self.audio_duration = 30\n",
+    "        self.audio_file = 'recorded_audio.wav'\n",
+    "\n",
+    "    def update_frame(self):\n",
+    "        ret, frame = self.capture.read()\n",
+    "        if ret:\n",
+    "            frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "            h, w, ch = frame.shape\n",
+    "            bytes_per_line = ch * w\n",
+    "            convert_to_qt_format = QImage(frame.data, w, h, bytes_per_line, QImage.Format_RGB888)\n",
+    "            p = convert_to_qt_format.scaled(640, 480, Qt.KeepAspectRatio)\n",
+    "            self.video_label.setPixmap(QPixmap.fromImage(p))\n",
+    "\n",
+    "    def capture_frame(self):\n",
+    "        ret, frame = self.capture.read()\n",
+    "        if ret:\n",
+    "            cv2.imwrite('captured_frame.jpg', frame)\n",
+    "            self.goto_audio_button.show()\n",
+    "\n",
+    "    def switch_to_audio_page(self):\n",
+    "        self.capture_button.hide()\n",
+    "        self.goto_audio_button.hide()\n",
+    "        self.record_button.show()\n",
+    "        self.video_label.clear()  # Clear the webcam display\n",
+    "\n",
+    "    def record_voice(self):\n",
+    "        audio = pyaudio.PyAudio()\n",
+    "        stream = audio.open(format=self.audio_format,\n",
+    "                            channels=self.audio_channels,\n",
+    "                            rate=self.audio_sample_rate,\n",
+    "                            input=True,\n",
+    "                            frames_per_buffer=self.audio_chunk_size)\n",
+    "\n",
+    "        frames = []\n",
+    "\n",
+    "        print(\"recording...\")\n",
+    "\n",
+    "        for i in range(0, int(self.audio_sample_rate / self.audio_chunk_size * self.audio_duration)):\n",
+    "            data = stream.read(self.audio_chunk_size)\n",
+    "            frames.append(data)\n",
+    "\n",
+    "        stream.stop_stream()\n",
+    "        stream.close()\n",
+    "        audio.terminate()\n",
+    "\n",
+    "        wave_file = wave.open(self.audio_file, 'wb')\n",
+    "        wave_file.setnchannels(self.audio_channels)\n",
+    "        wave_file.setsampwidth(audio.get_sample_size(self.audio_format))\n",
+    "        wave_file.setframerate(self.audio_sample_rate)\n",
+    "        wave_file.writeframes(b''.join(frames))\n",
+    "        wave_file.close()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app = QApplication(sys.argv)\n",
+    "    window = MainWindow()\n",
+    "    window.show()\n",
+    "    sys.exit(app.exec_())\n"
+   ]
   }
  ],
  "metadata": {
@@ -114,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
